trunk/src/groove/view/parse/Label0Parser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 Label0.g 2010-05-04 09:28:18

package groove.view.parse;

import java.util.LinkedList;
import java.util.List;

import org.antlr.runtime.BaseRecognizer;
import org.antlr.runtime.BitSet;
import org.antlr.runtime.CommonToken;
import org.antlr.runtime.DFA;
import org.antlr.runtime.EarlyExitException;
import org.antlr.runtime.FailedPredicateException;
import org.antlr.runtime.IntStream;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTree;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.RewriteRuleSubtreeStream;
import org.antlr.runtime.tree.RewriteRuleTokenStream;
import org.antlr.runtime.tree.TreeAdaptor;

@SuppressWarnings("all")
public class Label0Parser extends Parser {
    public static final String[] tokenNames = new String[] {"<invalid>",
        "<EOR>", "<DOWN>", "<UP>", "NEW", "DEL", "NOT", "USE", "CNEW", "REM",
        "FORALL", "FORALLX", "EXISTS", "NESTED", "INT", "REAL", "STRING",
        "BOOL", "ATTR", "PROD", "ARG", "PAR", "TYPE", "FLAG", "PATH", "EMPTY",
        "ATOM", "TRUE", "FALSE", "CONSTRAINT", "MINUS", "STAR", "PLUS", "DOT",
        "BAR", "HAT", "EQUALS", "LBRACE", "RBRACE", "LPAR", "RPAR", "LSQUARE",
        "RSQUARE", "PLING", "QUERY", "COLON", "COMMA", "SQUOTE", "DQUOTE",
        "DOLLAR", "UNDER", "BSLASH", "IDENT", "LABEL", "NUMBER", "LETTER",
        "IDENTCHAR", "DIGIT", "'\\n'"};
    public static final int DOLLAR = 49;
    public static final int STAR = 31;
    public static final int FORALLX = 11;
    public static final int LSQUARE = 41;
    public static final int LETTER = 55;
    public static final int DEL = 5;
    public static final int LBRACE = 37;
    public static final int NEW = 4;
    public static final int IDENTCHAR = 56;
    public static final int DQUOTE = 48;
    public static final int EQUALS = 36;
    public static final int NOT = 6;
    public static final int ATOM = 26;
    public static final int EOF = -1;
    public static final int TYPE = 22;
    public static final int HAT = 35;
    public static final int UNDER = 50;
    public static final int T__58 = 58;
    public static final int PLING = 43;
    public static final int ARG = 20;
    public static final int LPAR = 39;
    public static final int COMMA = 46;
    public static final int PATH = 24;
    public static final int PROD = 19;
    public static final int IDENT = 52;
    public static final int PAR = 21;
    public static final int PLUS = 32;
    public static final int DIGIT = 57;
    public static final int EXISTS = 12;
    public static final int DOT = 33;
    public static final int ATTR = 18;
    public static final int RBRACE = 38;
    public static final int NUMBER = 54;
    public static final int BOOL = 17;
    public static final int FORALL = 10;
    public static final int INT = 14;
    public static final int SQUOTE = 47;
    public static final int REM = 9;
    public static final int MINUS = 30;
    public static final int RSQUARE = 42;
    public static final int TRUE = 27;
    public static final int CNEW = 8;
    public static final int FLAG = 23;
    public static final int EMPTY = 25;
    public static final int COLON = 45;
    public static final int NESTED = 13;
    public static final int REAL = 15;
    public static final int LABEL = 53;
    public static final int QUERY = 44;
    public static final int RPAR = 40;
    public static final int USE = 7;
    public static final int FALSE = 28;
    public static final int CONSTRAINT = 29;
    public static final int BSLASH = 51;
    public static final int BAR = 34;
    public static final int STRING = 16;

    // delegates
    // delegators

    public Label0Parser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }

    public Label0Parser(TokenStream input, RecognizerSharedState state) {
        super(input, state);

    }

    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }

    public TreeAdaptor getTreeAdaptor() {
        return this.adaptor;
    }

    public String[] getTokenNames() {
        return Label0Parser.tokenNames;
    }

    public String getGrammarFileName() {
        return "Label0.g";
    }

    private boolean isGraph;

    public void setIsGraph(boolean isGraph) {
        this.isGraph = isGraph;
    }

    private List<String> errors = new LinkedList<String>();

    public void displayRecognitionError(String[] tokenNames,
            RecognitionException e) {
        String hdr = getErrorHeader(e);
        String msg = getErrorMessage(e, tokenNames);
        this.errors.add(hdr + " " + msg);
    }

    public List<String> getErrors() {
        return this.errors;
    }

    CommonTree concat(CommonTree seq) {
        String result;
        List children = seq.getChildren();
        if (children == null) {
            result = seq.getText();
        } else {
            StringBuilder builder = new StringBuilder();
            for (Object token : seq.getChildren()) {
                builder.append(((CommonTree) token).getText());
            }
            result = builder.toString();
        }
        return new CommonTree(new CommonToken(IDENT, result));
    }

    public static class label_return extends ParserRuleReturnScope {
        CommonTree tree;

        public Object getTree() {
            return this.tree;
        }
    };

    // $ANTLR start "label"
    // Label0.g:109:1: label : ( quantLabel EOF | specialLabel EOF );
    public final Label0Parser.label_return label() throws RecognitionException {
        Label0Parser.label_return retval = new Label0Parser.label_return();
        retval.start = this.input.LT(1);

        CommonTree root_0 = null;

        Token EOF2 = null;
        Token EOF4 = null;
        Label0Parser.quantLabel_return quantLabel1 = null;

        Label0Parser.specialLabel_return specialLabel3 = null;

        CommonTree EOF2_tree = null;
        CommonTree EOF4_tree = null;

        try {
            // Label0.g:110:4: ( quantLabel EOF | specialLabel EOF )
            int alt1 = 2;
            alt1 = this.dfa1.predict(this.input);
            switch (alt1) {
            case 1:
                // Label0.g:110:6: quantLabel EOF
            {
                root_0 = (CommonTree) this.adaptor.nil();

                pushFollow(FOLLOW_quantLabel_in_label494);
                quantLabel1 = quantLabel();

                this.state._fsp--;
                if (this.state.failed) {
                    return retval;
                }
                if (this.state.backtracking == 0) {
                    this.adaptor.addChild(root_0, quantLabel1.getTree());
                }
                EOF2 = (Token) match(this.input, EOF, FOLLOW_EOF_in_label496);
                if (this.state.failed) {
                    return retval;
                }

            }
                break;
            case 2:
                // Label0.g:111:6: specialLabel EOF
            {
                root_0 = (CommonTree) this.adaptor.nil();

                pushFollow(FOLLOW_specialLabel_in_label504);
                specialLabel3 = specialLabel();

                this.state._fsp--;
                if (this.state.failed) {
                    return retval;
                }
                if (this.state.backtracking == 0) {
                    this.adaptor.addChild(root_0, specialLabel3.getTree());
                }
                EOF4 = (Token) match(this.input, EOF, FOLLOW_EOF_in_label506);
                if (this.state.failed) {
                    return retval;
                }

            }
                break;

            }
            retval.stop = this.input.LT(-1);

            if (this.state.backtracking == 0) {

                retval.tree =
                    (CommonTree) this.adaptor.rulePostProcessing(root_0);
                this.adaptor.setTokenBoundaries(retval.tree, retval.start,
                    retval.stop);
            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(this.input, re);
            retval.tree =
                (CommonTree) this.adaptor.errorNode(this.input, retval.start,
                    this.input.LT(-1), re);

        } finally {
        }
        return retval;
    }

    // $ANTLR end "label"

    public static class quantLabel_return extends ParserRuleReturnScope {
        CommonTree tree;

        public Object getTree() {
            return this.tree;
        }
    };

    // $ANTLR start "quantLabel"
    // Label0.g:114:1: quantLabel : ( quantPrefix ( EQUALS IDENT COLON ( rolePrefix COLON actualLabel -> ^( rolePrefix IDENT actualLabel ) | actualLabel -> ^( USE IDENT actualLabel ) | -> ^( quantPrefix IDENT ) ) | COLON -> quantPrefix ) | roleLabel );
    public final Label0Parser.quantLabel_return quantLabel()
        throws RecognitionException {
        Label0Parser.quantLabel_return retval =
            new Label0Parser.quantLabel_return();
        retval.start = this.input.LT(1);

        CommonTree root_0 = null;

        Token EQUALS6 = null;
        Token IDENT7 = null;
        Token COLON8 = null;
        Token COLON10 = null;
        Token COLON13 = null;
        Label0Parser.quantPrefix_return quantPrefix5 = null;

        Label0Parser.rolePrefix_return rolePrefix9 = null;

        Label0Parser.actualLabel_return actualLabel11 = null;

        Label0Parser.actualLabel_return actualLabel12 = null;

        Label0Parser.roleLabel_return roleLabel14 = null;

        CommonTree EQUALS6_tree = null;
        CommonTree IDENT7_tree = null;
        CommonTree COLON8_tree = null;
        CommonTree COLON10_tree = null;
        CommonTree COLON13_tree = null;
        RewriteRuleTokenStream stream_COLON =
            new RewriteRuleTokenStream(this.adaptor, "token COLON");
        RewriteRuleTokenStream stream_IDENT =
            new RewriteRuleTokenStream(this.adaptor, "token IDENT");
        RewriteRuleTokenStream stream_EQUALS =
            new RewriteRuleTokenStream(this.adaptor, "token EQUALS");
        RewriteRuleSubtreeStream stream_actualLabel =
            new RewriteRuleSubtreeStream(this.adaptor, "rule actualLabel");
        RewriteRuleSubtreeStream stream_rolePrefix =
            new RewriteRuleSubtreeStream(this.adaptor, "rule rolePrefix");
        RewriteRuleSubtreeStream stream_quantPrefix =
            new RewriteRuleSubtreeStream(this.adaptor, "rule quantPrefix");
        try {
            // Label0.g:115:4: ( quantPrefix ( EQUALS IDENT COLON ( rolePrefix COLON actualLabel -> ^( rolePrefix IDENT actualLabel ) | actualLabel -> ^( USE IDENT actualLabel ) | -> ^( quantPrefix IDENT ) ) | COLON -> quantPrefix ) | roleLabel )
            int alt4 = 2;
            alt4 = this.dfa4.predict(this.input);
            switch (alt4) {
            case 1:
                // Label0.g:115:6: quantPrefix ( EQUALS IDENT COLON ( rolePrefix COLON actualLabel -> ^( rolePrefix IDENT actualLabel ) | actualLabel -> ^( USE IDENT actualLabel ) | -> ^( quantPrefix IDENT ) ) | COLON -> quantPrefix )
            {
                pushFollow(FOLLOW_quantPrefix_in_quantLabel522);
                quantPrefix5 = quantPrefix();

                this.state._fsp--;
                if (this.state.failed) {
                    return retval;
                }
                if (this.state.backtracking == 0) {
                    stream_quantPrefix.add(quantPrefix5.getTree());
                }
                // Label0.g:116:6: ( EQUALS IDENT COLON ( rolePrefix COLON actualLabel -> ^( rolePrefix IDENT actualLabel ) | actualLabel -> ^( USE IDENT actualLabel ) | -> ^( quantPrefix IDENT ) ) | COLON -> quantPrefix )
                int alt3 = 2;
                int LA3_0 = this.input.LA(1);

                if ((LA3_0 == EQUALS)) {
                    alt3 = 1;
                } else if ((LA3_0 == COLON)) {
                    alt3 = 2;
                } else {
                    if (this.state.backtracking > 0) {
                        this.state.failed = true;
                        return retval;
                    }
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 0, this.input);

                    throw nvae;
                }
                switch (alt3) {
                case 1:
                    // Label0.g:116:8: EQUALS IDENT COLON ( rolePrefix COLON actualLabel -> ^( rolePrefix IDENT actualLabel ) | actualLabel -> ^( USE IDENT actualLabel ) | -> ^( quantPrefix IDENT ) )
                {
                    EQUALS6 =
                        (Token) match(this.input, EQUALS,
                            FOLLOW_EQUALS_in_quantLabel531);
                    if (this.state.failed) {
                        return retval;
                    }
                    if (this.state.backtracking == 0) {
                        stream_EQUALS.add(EQUALS6);
                    }

                    IDENT7 =
                        (Token) match(this.input, IDENT,
                            FOLLOW_IDENT_in_quantLabel533);
                    if (this.state.failed) {
                        return retval;
                    }
                    if (this.state.backtracking == 0) {
                        stream_IDENT.add(IDENT7);
                    }

                    COLON8 =
                        (Token) match(this.input, COLON,
                            FOLLOW_COLON_in_quantLabel535);
                    if (this.state.failed) {
                        return retval;
                    }
                    if (this.state.backtracking == 0) {
                        stream_COLON.add(COLON8);
                    }

                    // Label0.g:117:8: ( rolePrefix COLON actualLabel -> ^( rolePrefix IDENT actualLabel ) | actualLabel -> ^( USE IDENT actualLabel ) | -> ^( quantPrefix IDENT ) )
                    int alt2 = 3;
                    alt2 = this.dfa2.predict(this.input);
                    switch (alt2) {
                    case 1:
                        // Label0.g:117:10: rolePrefix COLON actualLabel
                    {
                        pushFollow(FOLLOW_rolePrefix_in_quantLabel546);
                        rolePrefix9 = rolePrefix();

                        this.state._fsp--;
                        if (this.state.failed) {
                            return retval;
                        }
                        if (this.state.backtracking == 0) {
                            stream_rolePrefix.add(rolePrefix9.getTree());
                        }
                        COLON10 =
                            (Token) match(this.input, COLON,
                                FOLLOW_COLON_in_quantLabel548);
                        if (this.state.failed) {
                            return retval;
                        }
                        if (this.state.backtracking == 0) {
                            stream_COLON.add(COLON10);
                        }

                        pushFollow(FOLLOW_actualLabel_in_quantLabel550);
                        actualLabel11 = actualLabel();

                        this.state._fsp--;
                        if (this.state.failed) {
                            return retval;
                        }
                        if (this.state.backtracking == 0) {
                            stream_actualLabel.add(actualLabel11.getTree());
                        }

                        // AST REWRITE
                        // elements: actualLabel, rolePrefix, IDENT
                        // token labels: 
                        // rule labels: retval
                        // token list labels: 
                        // rule list labels: 
                        // wildcard labels: 
                        if (this.state.backtracking == 0) {
                            retval.tree = root_0;
                            RewriteRuleSubtreeStream stream_retval =
                                new RewriteRuleSubtreeStream(this.adaptor,
                                    "rule retval", retval != null ? retval.tree
                                            : null);

                            root_0 = (CommonTree) this.adaptor.nil();
                            // 118:10: -> ^( rolePrefix IDENT actualLabel )
                            {
                                // Label0.g:118:13: ^( rolePrefix IDENT actualLabel )
                                {
                                    CommonTree root_1 =
                                        (CommonTree) this.adaptor.nil();
                                    root_1 =
                                        (CommonTree) this.adaptor.becomeRoot(
                                            stream_rolePrefix.nextNode(),
                                            root_1);

                                    this.adaptor.addChild(root_1,
                                        stream_IDENT.nextNode());
                                    this.adaptor.addChild(root_1,
                                        stream_actualLabel.nextTree());

                                    this.adaptor.addChild(root_0, root_1);
                                }

                            }

                            retval.tree = root_0;
                        }
                    }
                        break;
                    case 2:
                        // Label0.g:119:10: actualLabel
                    {
                        pushFollow(FOLLOW_actualLabel_in_quantLabel580);
                        actualLabel12 = actualLabel();

                        this.state._fsp--;
                        if (this.state.failed) {
                            return retval;
                        }
                        if (this.state.backtracking == 0) {
                            stream_actualLabel.add(actualLabel12.getTree());
                        }

                        // AST REWRITE
                        // elements: IDENT, actualLabel
                        // token labels: 
                        // rule labels: retval
                        // token list labels: 
                        // rule list labels: 
                        // wildcard labels: 
                        if (this.state.backtracking == 0) {
                            retval.tree = root_0;
                            RewriteRuleSubtreeStream stream_retval =
                                new RewriteRuleSubtreeStream(this.adaptor,
                                    "rule retval", retval != null ? retval.tree
                                            : null);

                            root_0 = (CommonTree) this.adaptor.nil();
                            // 120:10: -> ^( USE IDENT actualLabel )
                            {
                                // Label0.g:120:13: ^( USE IDENT actualLabel )
                                {
                                    CommonTree root_1 =
                                        (CommonTree) this.adaptor.nil();
                                    root_1 =
                                        (CommonTree) this.adaptor.becomeRoot(
                                            (CommonTree) this.adaptor.create(
                                                USE, "USE"), root_1);

                                    this.adaptor.addChild(root_1,
                                        stream_IDENT.nextNode());
                                    this.adaptor.addChild(root_1,
                                        stream_actualLabel.nextTree());

                                    this.adaptor.addChild(root_0, root_1);
                                }

                            }

                            retval.tree = root_0;
                        }
                    }
                        break;
                    case 3:
                        // Label0.g:121:10: 
                    {

                        // AST REWRITE
                        // elements: IDENT, quantPrefix
                        // token labels: 
                        // rule labels: retval
                        // token list labels: 
                        // rule list labels: 
                        // wildcard labels: 
                        if (this.state.backtracking == 0) {
                            retval.tree = root_0;
                            RewriteRuleSubtreeStream stream_retval =
                                new RewriteRuleSubtreeStream(this.adaptor,
                                    "rule retval", retval != null ? retval.tree
                                            : null);

                            root_0 = (CommonTree) this.adaptor.nil();
                            // 121:10: -> ^( quantPrefix IDENT )
                            {
                                // Label0.g:121:13: ^( quantPrefix IDENT )
                                {
                                    CommonTree root_1 =
                                        (CommonTree) this.adaptor.nil();
                                    root_1 =
                                        (CommonTree) this.adaptor.becomeRoot(
                                            stream_quantPrefix.nextNode(),
                                            root_1);

                                    this.adaptor.addChild(root_1,
                                        stream_IDENT.nextNode());

                                    this.adaptor.addChild(root_0, root_1);
                                }

                            }

                            retval.tree = root_0;
                        }
                    }
                        break;

                    }

                }
                    break;
                case 2:
                    // Label0.g:123:8: COLON
                {
                    COLON13 =
                        (Token) match(this.input, COLON,
                            FOLLOW_COLON_in_quantLabel634);
                    if (this.state.failed) {
                        return retval;
                    }
                    if (this.state.backtracking == 0) {
                        stream_COLON.add(COLON13);
                    }

                    // AST REWRITE
                    // elements: quantPrefix
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if (this.state.backtracking == 0) {
                        retval.tree = root_0;
                        RewriteRuleSubtreeStream stream_retval =
                            new RewriteRuleSubtreeStream(this.adaptor,
                                "rule retval", retval != null ? retval.tree
                                        : null);

                        root_0 = (CommonTree) this.adaptor.nil();
                        // 124:10: -> quantPrefix
                        {
                            this.adaptor.addChild(root_0,
                                stream_quantPrefix.nextTree());

                        }

                        retval.tree = root_0;
                    }
                }
                    break;

                }

            }
                break;
            case 2:
                // Label0.g:126:6: roleLabel
            {
                root_0 = (CommonTree) this.adaptor.nil();

                pushFollow(FOLLOW_roleLabel_in_quantLabel661);
                roleLabel14 = roleLabel();

                this.state._fsp--;
                if (this.state.failed) {
                    return retval;
                }
                if (this.state.backtracking == 0) {
                    this.adaptor.addChild(root_0, roleLabel14.getTree());
                }

            }
                break;

            }
            retval.stop = this.input.LT(-1);

            if (this.state.backtracking == 0) {

                retval.tree =
                    (CommonTree) this.adaptor.rulePostProcessing(root_0);
                this.adaptor.setTokenBoundaries(retval.tree, retval.start,
                    retval.stop);
            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(this.input, re);
            retval.tree =
                (CommonTree) this.adaptor.errorNode(this.input, retval.start,
                    this.input.LT(-1), re);

        } finally {
        }
        return retval;
    }

    // $ANTLR end "quantLabel"

    public static class quantPrefix_return extends ParserRuleReturnScope {
        CommonTree tree;

        public Object getTree() {
            return this.tree;
        }
    };

    // $ANTLR start "quantPrefix"
    // Label0.g:129:1: quantPrefix : ( FORALL | FORALLX | EXISTS );
    public final Label0Parser.quantPrefix_return quantPrefix()
        throws RecognitionException {
        Label0Parser.quantPrefix_return retval =
            new Label0Parser.quantPrefix_return();
        retval.start = this.input.LT(1);

        CommonTree root_0 = null;

        Token set15 = null;

        CommonTree set15_tree = null;

        try {
            // Label0.g:130:4: ( FORALL | FORALLX | EXISTS )
            // Label0.g:
            {
                root_0 = (CommonTree) this.adaptor.nil();

                set15 = (Token) this.input.LT(1);
                if ((this.input.LA(1) >= FORALL && this.input.LA(1) <= EXISTS)) {
                    this.input.consume();
                    if (this.state.backtracking == 0) {
                        this.adaptor.addChild(root_0,
                            (CommonTree) this.adaptor.create(set15));
                    }
                    this.state.errorRecovery = false;
                    this.state.failed = false;
                } else {
                    if (this.state.backtracking > 0) {
                        this.state.failed = true;
                        return retval;
                    }
                    MismatchedSetException mse =
                        new MismatchedSetException(null, this.input);
                    throw mse;
                }

            }

            retval.stop = this.input.LT(-1);

            if (this.state.backtracking == 0) {

                retval.tree =
                    (CommonTree) this.adaptor.rulePostProcessing(root_0);
                this.adaptor.setTokenBoundaries(retval.tree, retval.start,
                    retval.stop);
            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(this.input, re);
            retval.tree =
                (CommonTree) this.adaptor.errorNode(this.input, retval.start,
                    this.input.LT(-1), re);

        } finally {
        }
        return retval;
    }

    // $ANTLR end "quantPrefix"

    public static class roleLabel_return extends ParserRuleReturnScope {
        CommonTree tree;

        public Object getTree() {
            return this.tree;
        }
    };

    // $ANTLR start "roleLabel"
    // Label0.g:133:1: roleLabel : ( rolePrefix ( EQUALS IDENT COLON actualLabel -> ^( rolePrefix IDENT actualLabel ) | COLON ( actualLabel -> ^( rolePrefix actualLabel ) | -> rolePrefix ) ) | actualLabel );
    public final Label0Parser.roleLabel_return roleLabel()
        throws RecognitionException {
        Label0Parser.roleLabel_return retval =
            new Label0Parser.roleLabel_return();
        retval.start = this.input.LT(1);

        CommonTree root_0 = null;

        Token EQUALS17 = null;
        Token IDENT18 = null;
        Token COLON19 = null;
        Token COLON21 = null;
        Label0Parser.rolePrefix_return rolePrefix16 = null;

        Label0Parser.actualLabel_return actualLabel20 = null;

        Label0Parser.actualLabel_return actualLabel22 = null;

        Label0Parser.actualLabel_return actualLabel23 = null;

        CommonTree EQUALS17_tree = null;
        CommonTree IDENT18_tree = null;
        CommonTree COLON19_tree = null;
        CommonTree COLON21_tree = null;
        RewriteRuleTokenStream stream_COLON =
            new RewriteRuleTokenStream(this.adaptor, "token COLON");
        RewriteRuleTokenStream stream_IDENT =
            new RewriteRuleTokenStream(this.adaptor, "token IDENT");
        RewriteRuleTokenStream stream_EQUALS =
            new RewriteRuleTokenStream(this.adaptor, "token EQUALS");
        RewriteRuleSubtreeStream stream_actualLabel =
            new RewriteRuleSubtreeStream(this.adaptor, "rule actualLabel");
        RewriteRuleSubtreeStream stream_rolePrefix =
            new RewriteRuleSubtreeStream(this.adaptor, "rule rolePrefix");
        try {
            // Label0.g:134:4: ( rolePrefix ( EQUALS IDENT COLON actualLabel -> ^( rolePrefix IDENT actualLabel ) | COLON ( actualLabel -> ^( rolePrefix actualLabel ) | -> rolePrefix ) ) | actualLabel )
            int alt7 = 2;
            alt7 = this.dfa7.predict(this.input);
            switch (alt7) {
            case 1:
                // Label0.g:134:6: rolePrefix ( EQUALS IDENT COLON actualLabel -> ^( rolePrefix IDENT actualLabel ) | COLON ( actualLabel -> ^( rolePrefix actualLabel ) | -> rolePrefix ) )
            {
                pushFollow(FOLLOW_rolePrefix_in_roleLabel699);
                rolePrefix16 = rolePrefix();

                this.state._fsp--;
                if (this.state.failed) {
                    return retval;
                }
                if (this.state.backtracking == 0) {
                    stream_rolePrefix.add(rolePrefix16.getTree());
                }
                // Label0.g:135:6: ( EQUALS IDENT COLON actualLabel -> ^( rolePrefix IDENT actualLabel ) | COLON ( actualLabel -> ^( rolePrefix actualLabel ) | -> rolePrefix ) )
                int alt6 = 2;
                int LA6_0 = this.input.LA(1);

                if ((LA6_0 == EQUALS)) {
                    alt6 = 1;
                } else if ((LA6_0 == COLON)) {
                    alt6 = 2;
                } else {
                    if (this.state.backtracking > 0) {
                        this.state.failed = true;
                        return retval;
                    }
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 0, this.input);

                    throw nvae;
                }
                switch (alt6) {
                case 1:
                    // Label0.g:135:8: EQUALS IDENT COLON actualLabel
                {
                    EQUALS17 =
                        (Token) match(this.input, EQUALS,
                            FOLLOW_EQUALS_in_roleLabel708);
                    if (this.state.failed) {
                        return retval;
                    }
                    if (this.state.backtracking == 0) {
                        stream_EQUALS.add(EQUALS17);
                    }

                    IDENT18 =
                        (Token) match(this.input, IDENT,
                            FOLLOW_IDENT_in_roleLabel710);
                    if (this.state.failed) {
                        return retval;
                    }
                    if (this.state.backtracking == 0) {
                        stream_IDENT.add(IDENT18);
                    }

                    COLON19 =
                        (Token) match(this.input, COLON,
                            FOLLOW_COLON_in_roleLabel712);
                    if (this.state.failed) {
                        return retval;
                    }
                    if (this.state.backtracking == 0) {
                        stream_COLON.add(COLON19);
                    }

                    pushFollow(FOLLOW_actualLabel_in_roleLabel714);
                    actualLabel20 = actualLabel();

                    this.state._fsp--;
                    if (this.state.failed) {
                        return retval;
                    }
                    if (this.state.backtracking == 0) {
                        stream_actualLabel.add(actualLabel20.getTree());
                    }

                    // AST REWRITE
                    // elements: actualLabel, IDENT, rolePrefix
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if (this.state.backtracking == 0) {
                        retval.tree = root_0;
                        RewriteRuleSubtreeStream stream_retval =
                            new RewriteRuleSubtreeStream(this.adaptor,
                                "rule retval", retval != null ? retval.tree
                                        : null);

                        root_0 = (CommonTree) this.adaptor.nil();
                        // 136:10: -> ^( rolePrefix IDENT actualLabel )
                        {
                            // Label0.g:136:13: ^( rolePrefix IDENT actualLabel )
                            {
                                CommonTree root_1 =
                                    (CommonTree) this.adaptor.nil();
                                root_1 =
                                    (CommonTree) this.adaptor.becomeRoot(
                                        stream_rolePrefix.nextNode(), root_1);

                                this.adaptor.addChild(root_1,
